[gd_scene load_steps=13 format=2]

[ext_resource path="res://nodes/room.gd" type="Script" id=1]
[ext_resource path="res://resources/tiles.tres" type="TileSet" id=2]
[ext_resource path="res://nodes/exit.tscn" type="PackedScene" id=3]
[ext_resource path="res://images/sprites.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 1.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1.5, 64 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 64, 1.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1.5, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 108, 24, 12, 12 )
margin = Rect2( -0.5, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 120, 24, 12, 12 )
margin = Rect2( 0, -0.5, 0, 0 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 120, 36, 12, 12 )
margin = Rect2( 0.5, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 108, 36, 12, 12 )
margin = Rect2( 0, 0.5, 0, 0 )

[node name="Room" type="YSort"]
script = ExtResource( 1 )

[node name="Roads" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 12, 12 )
cell_custom_transform = Transform2D( 12, 0, 0, 12, 0, 0 )
cell_tile_origin = 1
format = 1

[node name="Doodads" type="YSort" parent="."]

[node name="Exits" type="Node2D" parent="."]

[node name="Top" parent="Exits" instance=ExtResource( 3 )]

[node name="Collider" parent="Exits/Top" index="0"]
position = Vector2( 66, 0 )
shape = SubResource( 1 )

[node name="Right" parent="Exits" instance=ExtResource( 3 )]

[node name="Collider" parent="Exits/Right" index="0"]
position = Vector2( 132, 66 )
shape = SubResource( 2 )

[node name="Bottom" parent="Exits" instance=ExtResource( 3 )]

[node name="Collider" parent="Exits/Bottom" index="0"]
position = Vector2( 66, 132 )
shape = SubResource( 3 )

[node name="Left" parent="Exits" instance=ExtResource( 3 )]

[node name="Collider" parent="Exits/Left" index="0"]
position = Vector2( 0, 66 )
shape = SubResource( 4 )

[node name="PlacePositions" type="Node2D" parent="."]

[node name="Top" type="Position2D" parent="PlacePositions"]
position = Vector2( 29, 8 )

[node name="Right" type="Position2D" parent="PlacePositions"]
position = Vector2( 124, 30 )

[node name="Bottom" type="Position2D" parent="PlacePositions"]
position = Vector2( 102, 124 )

[node name="Left" type="Position2D" parent="PlacePositions"]
position = Vector2( 8, 103 )

[node name="Arrows" type="Node2D" parent="."]

[node name="Top" type="Sprite" parent="Arrows" groups=["arrows"]]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 66, -12 )
texture = SubResource( 5 )

[node name="Right" type="Sprite" parent="Arrows" groups=["arrows"]]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 144, 66 )
texture = SubResource( 6 )

[node name="Bottom" type="Sprite" parent="Arrows" groups=["arrows"]]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 66, 144 )
texture = SubResource( 7 )

[node name="Left" type="Sprite" parent="Arrows" groups=["arrows"]]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( -12, 66 )
texture = SubResource( 8 )

[connection signal="body_entered" from="Exits/Top" to="." method="_on_Top_body_entered"]
[connection signal="body_entered" from="Exits/Right" to="." method="_on_Right_body_entered"]
[connection signal="body_entered" from="Exits/Bottom" to="." method="_on_Bottom_body_entered"]
[connection signal="body_entered" from="Exits/Left" to="." method="_on_Left_body_entered"]

[editable path="Exits/Top"]
[editable path="Exits/Right"]
[editable path="Exits/Bottom"]
[editable path="Exits/Left"]
